--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-bootstrap": "~0.28.3",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "reflux": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
